omni/tests/goldens/types/undefined_ident_03.omni
let result3:int = missing3
